doc/istio/httpbin/2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpbin-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - "*"
  gateways:
  - httpbin-gateway
  http:
  - match:
    - uri:
        prefix: /status
    - uri:
        prefix: /delay
    # - uri:
    #     prefix: /headers
    route:
    - destination:
        port:
          number: 8000
        host: httpbin

# ---
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: mygs-ingress
# spec:
#   rules:
#   - host: httpbin.k8s.mygs.com
#     http:
#       paths:
#       - path: 
#         backend:
#           serviceName: httpbin
#           servicePort: 8000
